# Remi-Service

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  test.py
app/enums/: users.py
app/enums/permissions/: casb.py
app/models/: __init__.py  maimai.py  user.py
app/routes/v1/: __init__.py
app/routes/v1/maimai/: __init__.py
app/routes/v1/maimai_cn/: __init__.py
app/routes/v1/user/: __init__.py
app/schemas/: user.py
app/schemas/responses/: mai_cn.py  maimai.py  user.py
app/utils/mai_cn/: __init__.py
app/utils/permission/: casb.py
app/utils/secure/: pwd.py
cfgs/: casbin_model.conf  casbin_policy.csv  config.py
migrations/models/: 0_20250519203720_init.py  0_20250607145345_init.py  0_20250703144828_init.py  1_20250607182112_add-userbind-name-field.py  2_20250701152549_add-default-bind-field.py  3_20250701154135_add-bind-name-unique.py
scripts/: reset_database.ps1
