[project]
name = "remi-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.9.0",
    "casbin>=1.43.0",
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "pydantic[email]>=2.11.4",
    "tortoise-orm>=0.25.0",
    "uvicorn>=0.34.2",
]

[tool.aerich]
tortoise_orm = "config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
